k8s/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  labels:
    run: myrazzleapp
  name: myrazzleapp-deployment
  namespace: razzle
spec:
  replicas: 1
  selector:
    matchLabels:
      run: myrazzleapp
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        run: myrazzleapp
    spec:
      containers:
      - image: sach97/razzle-k8s:latest
        imagePullPolicy: Always
        name: myrazzleapp
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
